--- a/src/styles/components/div.scss
+++ b/src/styles/components/div.scss
@@ -21,9 +21,13 @@
     border: none;
     padding: .1rem 1rem;  
     border-bottom: 3px solid rgba($red, .5);
+    color: $red;
     &:focus{
       border-bottom: 3px solid $red;
       outline: none;
+    }
+    &::placeholder {
+      color: rgba($red, .5);
     }
     &::placeholder, &{
       font-size: 18px;
