--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -30,3 +30,13 @@ header.header {
     padding-top: 1.5rem;
   }
 }
+
+
+@media screen and (max-width: 850px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+  header.header {
+    display: none; 
+  }
+}
