--- a/components/CardMenuResponsive.module.scss
+++ b/components/CardMenuResponsive.module.scss
@@ -44,3 +44,27 @@
     background: transparent;
   }
 }
+
+.animationInLeft {
+  animation: inLeft .5s;
+}
+
+.animationInRight {
+  animation: inRight .5s;
+}
+
+@keyframes inLeft {
+  0% { left: -100%; }
+  100% { left: 0%; }
+}
+
+@keyframes inRight {
+  0% { left: 0%; }
+  100% { left: -100%; }
+}
+
+@media screen and (min-width: 850px) {
+  .index {
+    display: none ;
+  }
+}
