--- a/components/CardLink.module.scss
+++ b/components/CardLink.module.scss
@@ -6,7 +6,7 @@
   border-radius: 5px;
   box-shadow: 0px .5px 4px $black;
   position: relative;
-  img{
+  img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -24,6 +24,7 @@
 }
 .select {
   position: absolute;
+  z-index: 2;
   bottom: 0;
 
   transition: ease .5s all;  
